prevent flickering of typekit fonts.

--- a/css/src/application.scss
+++ b/css/src/application.scss
@@ -105,6 +105,10 @@ strong {
 	margin: 1.75em 0;
 }
 
+.wf-loading, .webfont {
+	visibility: hidden;
+}
+
 
 /*
 	III. Header
